Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2957

Management methods on the broker don't work on newly created objects

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9
    • 0.9
    • C++ Broker
    • None

    Description

      If you create a queue from the API and immediately try to invoke a method on the queue using a QMF map message, the queue will not be found. Only after the next publish interval occurs can the queue be addressed for method calls.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: