QPID-2957 - Management methods on the broker don't work on newly created objects A test and a fix are included.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1038231 13f79535-47bb-0310-9956-ffa450edef68